<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.translatorapp.ui.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/parent_settings_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:elevation="6dp"
        tools:context=".ui.settings.SettingsFragment">

        <FrameLayout
            android:id="@+id/theme_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"
            android:background="?android:attr/selectableItemBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/theme_settings_IV"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_theme_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/theme_settings_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Translator.Headline6"
                    android:layout_marginStart="18dp"
                    app:layout_constraintStart_toEndOf="@+id/theme_settings_IV"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/theme" />

                <TextView
                    android:id="@+id/theme_settings_explanation_settings_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Translator.SettingsDescription"
                    android:text="@string/theme_settings_explanation"
                    app:layout_constraintTop_toBottomOf="@+id/theme_settings_TV"
                    app:layout_constraintStart_toStartOf="@+id/theme_settings_TV" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/scrimBackground" />

        <FrameLayout
            android:id="@+id/delete_recent_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:background="?android:attr/selectableItemBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/delete_recent_setting_IV"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_delete_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/delete_recent_setting_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    app:layout_constraintStart_toEndOf="@id/delete_recent_setting_IV"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.Translator.Headline6"
                    android:text="@string/clear_recent_words" />

                <TextView
                    android:id="@+id/delete_recent_settings_description_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Translator.SettingsDescription"
                    app:layout_constraintStart_toStartOf="@+id/delete_recent_setting_TV"
                    app:layout_constraintTop_toBottomOf="@+id/delete_recent_setting_TV"
                    android:text="@string/clear_setting_description" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/scrimBackground"/>

    </LinearLayout>
</layout>